--- a/_config.yml
+++ b/_config.yml
@@ -47,14 +47,14 @@ repo_trophies:
 # -----------------------------------------------------------------------------
 
 navbar_fixed: true
-footer_fixed: true
-search_enabled: true
+footer_fixed: false
+search_enabled: false
 socials_in_search: true
 posts_in_search: true
 bib_search: true
 
 # Dimensions
-max_width: 800px
+max_width: 720px
 
 # TODO: add layout settings (single page vs. multi-page)
 
