--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Lucas
 middle_name: R.
 last_name: Schiavetti
-contact_note: >
-  Cum mente et malleo
+contact_note: #>
+  #Cum mente et malleo
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: #>
@@ -22,7 +22,7 @@ url: https://luschiro.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
-back_to_top: true # set to false to disable the back to top button
+back_to_top: false # set to false to disable the back to top button
 
 # -----------------------------------------------------------------------------
 # Theme
@@ -54,7 +54,7 @@ posts_in_search: true
 bib_search: true
 
 # Dimensions
-max_width: 720px
+max_width: 800px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -86,8 +86,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: A-types # blog_name will be displayed in your blog page
+blog_description: ""
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
