--- a/_config.yml
+++ b/_config.yml
@@ -190,6 +190,7 @@ exclude:
   - package-lock.json
   - _pages/about_einstein.md
   - _pages/profiles.md
+  - _pages/dropdown.md
   - purgecss.config.js
   - README.md
   - readme_preview/
