--- a/_config.yml
+++ b/_config.yml
@@ -191,6 +191,7 @@ exclude:
   - _pages/about_einstein.md
   - _pages/profiles.md
   - _pages/dropdown.md
+  - _pages/teaching.md
   - purgecss.config.js
   - README.md
   - readme_preview/
