--- a/_config.yml
+++ b/_config.yml
@@ -146,6 +146,10 @@ newsletter:
 collections:
   books:
     output: true
+  news:
+    defaults:
+      layout: post
+    output: true
   projects:
     output: true
 
